フィードバック機能を追加

--- a/udondo-chatbot/public/index.html
+++ b/udondo-chatbot/public/index.html
@@ -42,19 +42,7 @@
 
             <!-- メッセージエリア -->
             <div class="messages-container" id="messagesContainer">
-                <div class="message assistant-message">
-                    <div class="avatar bot-avatar">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <rect width="18" height="10" x="3" y="11" rx="2"/>
-                            <circle cx="12" cy="5" r="2"/>
-                            <path d="m12 7 2 3H10l2-3Z"/>
-                        </svg>
-                    </div>
-                    <div class="message-content">
-                        <p>こんにちは！ウドンドAIです。宇宙のうどんについて何でもお聞きください！</p>
-                        <span class="timestamp" id="initialTimestamp"></span>
-                    </div>
-                </div>
+                <!-- 初期メッセージはJavaScriptで動的に追加 -->
             </div>
 
             <!-- 入力エリア -->
