--- a/udondo-chatbot/public/index.html
+++ b/udondo-chatbot/public/index.html
@@ -47,6 +47,10 @@
 
             <!-- 入力エリア -->
             <div class="input-area">
+                <div class="quick-reply-container" id="quickReplyContainer">
+                    <!-- よくある質問ボタンがここに動的に生成されます -->
+                </div>
+
                 <form class="input-form" id="chatForm">
                     <input type="text" 
                            id="messageInput" 
@@ -59,6 +63,7 @@
                         </svg>
                     </button>
                 </form>
+
                 <p class="footer-text">ウドンドAIは宇宙の知識を学習中です。銀河系最高のうどん情報をお届けします。</p>
             </div>
         </div>
